チュートリアルdone

--- a/views/index.html
+++ b/views/index.html
@@ -2,5 +2,7 @@
 <h1>TODO List</h1>
 <ul>
     <li><a href="/list">登録済みタスク一覧</a></li>
+    <li><a href="/user/new">ユーザー登録</a></li>
+    <li><a href="/logout">ログアウト</a></li>
 </ul>
 {{ template "footer" }}
